PIP-291 Java 17 upgrade and warning fixes